Update to fix warnings about intialising objects